--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,6 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # Build JAR (ללא טסטים כדי לא להיתקע על מפתחות/CI)
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -30,7 +29,6 @@ jobs:
       - name: Build JAR with Maven (skip tests)
         run: mvn -B clean install -DskipTests
 
-      # Docker login + build + push (3 טאגים: SHA, גרסה רצה, latest)
       - name: Docker login (Docker Hub)
         run: |
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
@@ -57,17 +55,7 @@ jobs:
           docker push "${IMAGE_NAME}:${IMAGE_TAG_VER}"
           docker push "${IMAGE_NAME}:latest"
 
-      # (אופציונלי) העתקת docker-compose.yml לשרת אם הוא לא קיים שם/רוצים לעדכן מהrepo
-      # - name: Copy compose to EC2
-      #   uses: appleboy/scp-action@v0.1.7
-      #   with:
-      #     host: ${{ secrets.EC2_HOST }}
-      #     username: ${{ secrets.EC2_USER }}
-      #     key: ${{ secrets.SSH_KEY }}
-      #     source: "docker-compose.yml"
-      #     target: ${{ secrets.EC2_COMPOSE_DIR }}
-
-      # Deploy ל-EC2 דרך SSH (יוצר .env, מעדכן תמונה, מריץ compose)
+      # Deploy to EC2
       - name: Deploy on EC2 via SSH
         uses: appleboy/ssh-action@v1.0.3
         env:
@@ -75,8 +63,8 @@ jobs:
           IMAGE_TAG_VER: ${{ env.IMAGE_TAG_VER }}
         with:
           host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}   # למשל ec2-user
-          key: ${{ secrets.SSH_KEY }}         # תוכן ה-PEM (כ-Secret)
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.SSH_KEY }}
           port: 22
           script_stop: true
           envs: IMAGE_NAME,IMAGE_TAG_VER
@@ -86,24 +74,23 @@ jobs:
 
             COMPOSE_DIR="$(printf '%s' "${{ secrets.EC2_COMPOSE_DIR }}" | tr -d '\r\n' | sed -e 's/[[:space:]]*$//')"
             if [ -z "$COMPOSE_DIR" ]; then
-              echo "ERROR: EC2_COMPOSE_DIR secret is empty"; exit 1
+              echo "ERROR: EC2_COMPOSE_DIR secret is empty"
+              exit 1
             fi
-            cd "$COMPOSE_DIR" || { echo "Invalid COMPOSE_DIR: $COMPOSE_DIR"; exit 1; }
 
-            # בדיקה שה-compose קיים
+            cd "$COMPOSE_DIR" || { echo "Invalid COMPOSE_DIR: $COMPOSE_DIR"; exit 1; }
             test -f docker-compose.yml || { echo "docker-compose.yml not found in $COMPOSE_DIR"; exit 1; }
 
-            # כותבים/מעדכנים .env (בשרת בלבד; compose יטען אוטומטית)
+            # write .env on the server (compose auto-loads it)
             umask 077
             cat > .env << 'EOF'
 OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
 GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
 GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
-# אופציונלי: אזור זמן ל-Java/קונטיינר
 TZ=Asia/Jerusalem
 EOF
 
-            # בודק docker compose / docker-compose
+            # detect compose binary
             if command -v docker compose >/dev/null 2>&1; then
               DC="docker compose"
             elif command -v docker-compose >/dev/null 2>&1; then
@@ -113,23 +100,19 @@ EOF
               exit 1
             fi
 
-            # מוודא שהשירות appserver מצביע לתגית החדשה
-            if grep -qE "image:\s*${IMAGE_NAME}:" docker-compose.yml; then
-              sed -i "s|image:\s*${IMAGE_NAME}:.*|image: ${IMAGE_NAME}:${IMAGE_TAG_VER}|g" docker-compose.yml
+            # ensure image tag on appserver
+            if grep -qE "image:[[:space:]]*${IMAGE_NAME}:" docker-compose.yml; then
+              sed -i "s|image:[[:space:]]*${IMAGE_NAME}:.*|image: ${IMAGE_NAME}:${IMAGE_TAG_VER}|g" docker-compose.yml
             else
-              # אם אין image בשירות, מוסיף אותו תחת appserver
               awk -v img="    image: ${IMAGE_NAME}:${IMAGE_TAG_VER}" '
                 $0 ~ /^[[:space:]]*appserver:/ && ins==0 { print; print img; ins=1; next }1
               ' docker-compose.yml > docker-compose.yml.tmp && mv docker-compose.yml.tmp docker-compose.yml
             fi
 
-            # מושך את האימג' המעודכן ומרים את השירות
             $DC pull appserver
             $DC up -d appserver
 
-            # ניקוי תמונות ישנות
             docker image prune -af || true
 
-            # הדפסה קצרה למעקב
             $DC ps
             $DC logs --since=5m appserver || true
