--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,18 +23,23 @@ jobs:
       - name: Build with Maven (skip tests)
         run: mvn -B -ntp clean package -DskipTests
 
+      # מייצרים BRANCH_SLUG ללא / כדי שיתאים ל-tag של Docker
+      - name: Compute branch slug
+        run: |
+          echo "BRANCH_SLUG=${GITHUB_REF_NAME//\//-}" >> $GITHUB_ENV
+
       - name: Docker meta (tags & labels)
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ secrets.DOCKERHUB_USERNAME }}/calendergpt
           tags: |
-            # תגים לפי שם בראנץ'
-            type=raw,value=${{ github.ref_name }}-latest
-            # תגים לפי SHA מקוצר + שם בראנץ'
-            type=sha,format=short,prefix=${{ github.ref_name }}-
-            # 'latest' רק כשהבראנץ' הוא main
-            type=raw,value=latest,enable=${{ github.ref_name == 'main' }}
+            # tag לפי שם בראנץ' (מסונן) + latest
+            type=raw,value=${{ env.BRANCH_SLUG }}-latest
+            # tag נוסף לפי SHA מקוצר (נוח לדיבוג)
+            type=sha,format=short,prefix=${{ env.BRANCH_SLUG }}-
+            # 'latest' רק כשבודקים ל-main
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
 
       - name: Set up Buildx
         uses: docker/setup-buildx-action@v3
@@ -49,8 +54,9 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile         # שנה אם ה-Dockerfile לא בשורש
+          file: ./Dockerfile
           push: true
+          platforms: linux/amd64      # חשוב ל-EC2 מבוסס x86_64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
@@ -69,34 +75,16 @@ jobs:
 
             cd "${{ secrets.EC2_COMPOSE_DIR }}"
 
-            if [ ! -d .git ]; then
-              echo "ERROR: .git not found in $PWD (EC2_COMPOSE_DIR). Clone the repo here once."
+            # ודא שזו תיקיית הפרויקט עם docker-compose.yml
+            if [ ! -f docker-compose.yml ]; then
+              echo "ERROR: docker-compose.yml not found in $PWD"
               exit 1
             fi
 
-            echo "==> git fetch + pull לכל בראנץ' עם upstream"
-            git fetch --all --prune
-            ORIG_BRANCH="$(git symbolic-ref -q --short HEAD || true)"
-            git for-each-ref --format='%(refname:short) %(upstream:short)' refs/heads | while read -r LOCAL UPSTREAM; do
-              [ -n "$UPSTREAM" ] || continue
-              echo "---- pulling $LOCAL"
-              git checkout "$LOCAL"
-              git pull --ff-only || true
-            done
-
-            # בראנץ' לפריסה: אם קבעת DEPLOY_BRANCH ב-Secrets – נשתמש בו, אחרת נשאיר את המקורי
-            if [ -n "${{ secrets.DEPLOY_BRANCH }}" ]; then
-              git checkout "${{ secrets.DEPLOY_BRANCH }}"
-              git pull --ff-only || true
-            elif [ -n "$ORIG_BRANCH" ]; then
-              git checkout "$ORIG_BRANCH"
-            fi
-
-            echo "==> כותב .env לקומפוז (כולל tag לאימג' + סודות)"
+            echo "==> כותב .env לקומפוז (image + סודות)"
             cat > .env << 'EOF'
-            # תגית האימג' שהרגע דחפנו: <branch>-latest
             CALGPT_IMAGE_REPO=${{ secrets.DOCKERHUB_USERNAME }}/calendergpt
-            CALGPT_IMAGE_TAG=${{ github.ref_name }}-latest
+            CALGPT_IMAGE_TAG=${{ env.BRANCH_SLUG }}-latest
 
             OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
             GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
@@ -114,17 +102,18 @@ jobs:
             EOF
             chmod 644 /opt/calendargpt/keys/public_key.pem'
 
-            echo "==> docker login (במידה והאימג' פרטי)"
+            echo "==> docker login (אם הריפו פרטי)"
             if [ -n "${{ secrets.DOCKERHUB_USERNAME }}" ] && [ -n "${{ secrets.DOCKERHUB_TOKEN }}" ]; then
               echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
             fi
 
-            echo "==> docker compose pull & up"
-            docker compose pull
-            docker compose up -d --remove-orphans
+            echo "==> משיכה והרמה מחדש בכוח"
+            docker compose pull server || true
+            docker compose up -d --no-deps --force-recreate --pull always server
 
-            echo "==> ניקוי תמונות ישנות (אופציונלי)"
-            docker image prune -f || true
+            echo "==> סטטוס לאחר הדיפלוי"
+            docker compose images || true
+            docker compose ps || true
 
             echo "==> בדיקת בריאות מקומית"
             curl -fsS http://127.0.0.1:8080/api/health || true
